# substrate-node-playground

node/: Cargo.toml
node/src/: rpc.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtimenew/: Cargo.toml
